# channels_another_chat

./: README.md  pyproject.toml
backend/accounts/: forms.py  manager.py  models.py
backend/accounts/migrations/: 0001_initial.py
backend/backend/: asgi.py  settings.py  urls.py
backend/chat/: consumers.py  models.py  routing.py  signals.py  views.py
backend/chat/migrations/: 0001_initial.py
backend/chat/templates/chat/: groupchat.html  home.html
backend/templates/registration/: login.html
