[tool.poetry]
name = "channels-another-chat"
version = "0.1.0"
description = "Практика работы с WebSocket"
authors = ["codarsssss <codarsssss@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
channels = "^4.0.0"
daphne = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
